--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 * {
     box-sizing: border-box;
-    font-family: Raleway;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(73, 73, 73);
 }
 
@@ -43,7 +43,7 @@ html, body {
 }
 
 .main-header {
-    background-color: red;
+    background-color: rgb(0, 38, 207);
     background-image: url('https://www.databankimx.com/wp-content/uploads/2015/07/Microsoft-Cloud-Offerings.jpg');
     background-blend-mode: multiply;
     background-size: cover;
@@ -71,8 +71,9 @@ html, body {
 .my-name {
     text-align: center;
     margin: 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 3em;
-    font-weight: normal;
+    font-weight: bolder;
     color: white;
 }
 
@@ -113,7 +114,7 @@ html, body {
 }
 
 .main-footer {
-    background-color: red;
+    background-color: rgb(0, 38, 207);
     color: white;
     position: fixed;
     bottom: 0;
